--- a/src/pages/EpisodeDetails/styles.scss
+++ b/src/pages/EpisodeDetails/styles.scss
@@ -311,6 +311,23 @@
 
     .episode-detailsPage-description {
         font-size: 16px;
+        line-height: 19px;
+    }
+
+    .episode-detailsPage-title-text {
+        @include interText(700, 32px, 39px, white)
+    }
+
+    .episode-detailsPage-episode-text {
+        @include interText(700, 32px, 39px, black)
+    }
+
+    .episode-detailsPage-info {
+        gap: 8px;
+    }
+
+    .episode-detailsPage-characters-container {
+        width: calc(100% - 32px);
     }
 }
 
